Fixed hover, center alignment.

--- a/style.css
+++ b/style.css
@@ -380,10 +380,12 @@ padding-left: 20%;
     -o-filter:      grayscale(80%);
     cursor: auto;
 }
+.small {
+    height: 250px;
+}
 .project-wrapper-small {
     z-index: 1;
     width: 100%;
-    height: 250px;
     background-color: #000000;
     display: flex;
     flex-direction: row;
@@ -413,6 +415,7 @@ padding-left: 20%;
 }
 .project-content {
     padding: 20px;
+    width: 100%;
 }
 .project-left {
     order: 1;
